Update _config.yml with my initial configuration for my settings; added email.

--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ avatar: https://www.gravatar.com/avatar/dc1b4714364620088489e23b80e5ebb5?s=64&d=
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email:
+  email:  newtronic (at) gmail.com
   facebook:
   flickr:
   github: newtronic/jekyll-now
