Update _config.yml description; displayed in header

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Knox North
 
 # Short bio or description (displayed in the header)
-description: Technology Enthusiast
+description: Technology Enthusiast, CIO
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://www.gravatar.com/avatar/dc1b4714364620088489e23b80e5ebb5?s=64&d=identicon&r=PG
